--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TmdbApp</string>
+    <string name="unknown_error">Unknown error occurred.</string>
+    <!-- Add other strings as needed -->
 </resources>
