Revamp year selection in FilterBottomSheet to use TextField and Grid of recent years, add clear button and update related strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="rating_value">%.1f</string>
     <string name="cancel">Cancel</string>
     <string name="apply">Apply</string>
+    <string name="enter_year">Enter year</string>
+    <string name="clear">Clear</string>
 </resources>
