Implement list creation UI and navigation flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,11 @@
     <string name="rating_value">%.1f</string>
     <string name="cancel">Cancel</string>
     <string name="apply">Apply</string>
+    <string name="create_list">Create List</string>
+    <string name="back">Back</string>
+    <string name="auth_error">Authentication error: %1$s</string>
+    <string name="list_name">List Name</string>
+    <string name="list_description">List Description</string>
+    <string name="list_created_success">List created successfully with ID: %1$d</string>
+    <string name="list_creation_error">Error creating list: %1$s</string>
 </resources>
