--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,9 @@
     <string name="list_description">List Description</string>
     <string name="list_created_success">List created successfully with ID: %1$d</string>
     <string name="list_creation_error">Error creating list: %1$s</string>
+    <string name="favorite">Favorite</string>
+    <string name="download_image">Download Image</string>
+    <string name="release_date">Release Date: %s</string>
+    <string name="rating">Rating: %.1f</string>
+    <string name="overview">Overview</string>
 </resources>
