Add BottomNavigationBar and new icons; integrate Scaffold in MainActivity; update TopBar with new icon resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <!-- Add these new strings -->
     <string name="enter_year">Enter year</string>
     <string name="clear">Clear</string>
+    <string name="content_desc_create_list">Create List</string>
 </resources>
