Add loading and error states for AI movie response

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="parse_error">Error parsing data. Please try again.</string>
     <string name="unknown_error">An unknown error occurred. Please try again.</string>
     <string name="ask_ai_about_movie">Ask AI about this movie</string>
+    <string name="retry_ai_request">Retry AI Request</string>
 </resources>
