--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="openai_api_key">OpenAI API Key</string>
     <string name="settings">Settings</string>
     <string name="enter_your_api_key">Enter your API key</string>
+    <string name="error_api_key_missing">API key is missing. Please set it in the Settings.</string>
 </resources>
