Add error handling and retry logic to MovieDetailScreen and ViewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="ask_ai_about_movie">Ask AI about this movie</string>
     <string name="retry_ai_request">Retry AI Request</string>
     <string name="settings_title">Settings</string>
+    <string name="retry">Retry</string>
     <string name="tmdb_api_key">TMDB API Key</string>
     <string name="openai_api_key">OpenAI API Key</string>
     <string name="settings">Settings</string>
